docs: 이미지 파일들 img 디렉토리로 이동

--- a/blog/[20240912]_[당신의 안전한 주택, 안주]_[안주]_[]_[AI가 만드는 편안한 안식처. 당신의 안전한 주택, 안주 프로젝트입니다. 웹 사용 설명서를 정리해봤습니다.]_[].md
+++ b/blog/[20240912]_[당신의 안전한 주택, 안주]_[안주]_[]_[AI가 만드는 편안한 안식처. 당신의 안전한 주택, 안주 프로젝트입니다. 웹 사용 설명서를 정리해봤습니다.]_[].md
@@ -25,7 +25,7 @@
 
 # 1. 메인 페이지 설명
 
-![메인화면](../img/safehosue/image_메인화면1.png)
+![메인화면](../img/image_메인화면1.png)
 안주 웹페이지에 접속하면 가장 먼저 메인 페이지가 나옵니다.  
 페이지 상단에는 **헤더**가 위치해 있으며, 메인 페이지는 스크롤을 통해 이동할 수 있는 **3개의 섹션**으로 구성되어 있습니다.
 
@@ -33,12 +33,12 @@
 
 로그인 여부와 사용자 유형(일반 사용자/점검자)에 따라 메뉴 구성이 다르게 설정되어 있습니다.
 
-![image_로그인되지않은사용자.png](../img/safehosue/image_로그인되지않은사용자.png)
+![image_로그인되지않은사용자.png](../img/image_로그인되지않은사용자.png)
 1. **로그인하지 않은 사용자** - **메뉴 항목**: 신고하기, 커뮤니티, 로그인, 앱 설명 - **설명**: 로그인하지 않은 상태에서는 신고하기, 커뮤니티, 앱 소개에 접근할 수 있도록 기본적인 메뉴가 제공됩니다.
 
-![image_로그인된일반인.png](../img/safehosue/image_로그인된일반인.png)
+![image_로그인된일반인.png](../img/image_로그인된일반인.png)
 2. **일반 사용자** - **메뉴 항목**: 신고하기, 커뮤니티, 로그아웃, 앱 설명 - **설명**: 로그인한 일반 사용자는 신고 기능과 커뮤니티를 이용할 수 있으며, 앱 설명도 확인 가능합니다. 로그인 대신 로그아웃 버튼이 표시됩니다.
 
-![image_로그인된점검자.png](../img/safehosue/image_로그인된점검자.png)
+![image_로그인된점검자.png](../img/image_로그인된점검자.png)
 3. **점검자** - **메뉴 항목**: 신고하기, 커뮤니티, 로그아웃, 대시보드 - **설명**: 점검자는 일반 사용자와 달리 **앱 설명 대신 대시보드**가 표시됩니다. 대시보드는 점검자가 필요한 데이터를 확인하거나 관리 작업을 수행할 수 있는 공간입니다.
 점검자는 대시보드를 통해 추가적인 관리 기능을 사용할 수 있는 권한을 가집니다.
