docs: 이미지 테스트

--- a/blog/[20240912]_[당신의 안전한 주택, 안주]_[안주]_[]_[AI가 만드는 편안한 안식처. 당신의 안전한 주택, 안주 프로젝트입니다. 웹 사용 설명서를 정리해봤습니다.]_[].md
+++ b/blog/[20240912]_[당신의 안전한 주택, 안주]_[안주]_[]_[AI가 만드는 편안한 안식처. 당신의 안전한 주택, 안주 프로젝트입니다. 웹 사용 설명서를 정리해봤습니다.]_[].md
@@ -34,6 +34,7 @@
 로그인 여부와 사용자 유형(일반 사용자/점검자)에 따라 메뉴 구성이 다르게 설정되어 있습니다.
 
 ![image_로그인되지않은사용자.png](/img/image_로그인되지않은사용자.png)
+![image_로그인되지않은사용자.png](/img/image_a.png)
 
 1. **로그인하지 않은 사용자** - **메뉴 항목**: 신고하기, 커뮤니티, 로그인, 앱 설명 - **설명**: 로그인하지 않은 상태에서는 신고하기, 커뮤니티, 앱 소개에 접근할 수 있도록 기본적인 메뉴가 제공됩니다.
 
