--- a/blog/[20240912]_[당신의 안전한 주택, 안주]_[안주]_[]_[AI가 만드는 편안한 안식처. 당신의 안전한 주택, 안주 프로젝트입니다. 웹 사용 설명서를 정리해봤습니다.]_[].md
+++ b/blog/[20240912]_[당신의 안전한 주택, 안주]_[안주]_[]_[AI가 만드는 편안한 안식처. 당신의 안전한 주택, 안주 프로젝트입니다. 웹 사용 설명서를 정리해봤습니다.]_[].md
@@ -26,6 +26,9 @@
 # 1. 메인 페이지 설명
 
 ![메인화면](/img/safehouse/image_메인화면1.png)
+![메인화면](../img/safehouse/image_메인화면1.png)
+<img src="/img/safehouse/image_메인화면1.png" alt="메인화면" />
+
 안주 웹페이지에 접속하면 가장 먼저 메인 페이지가 나옵니다.  
 페이지 상단에는 **헤더**가 위치해 있으며, 메인 페이지는 스크롤을 통해 이동할 수 있는 **3개의 섹션**으로 구성되어 있습니다.
 
