--- a/blog/[20240912]_[당신의 안전한 주택_안주]_[안주]_[]_[AI가 만드는 편안한 안식처. 당신의 안전한 주택, 안주 프로젝트입니다. 웹 사용 설명서를 정리해봤습니다.]_[].md
+++ b/blog/[20240912]_[당신의 안전한 주택_안주]_[안주]_[]_[AI가 만드는 편안한 안식처. 당신의 안전한 주택, 안주 프로젝트입니다. 웹 사용 설명서를 정리해봤습니다.]_[].md
@@ -25,8 +25,9 @@
 
 # 1. 메인 페이지 설명
 
-![메인화면](https://github.com/gh-56/promenadeforme/blob/main/attachments/%EC%95%88%EC%A3%BC%20%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8%20%EC%9D%B4%EB%AF%B8%EC%A7%80/image_%EA%B2%B0%ED%95%A8%EC%9C%A0%ED%98%95%EC%84%A0%ED%83%9D.png)
+![메인화면](https://github.com/gh-56/learningman/blob/release/gh/capture_img/capture_%EA%B3%BC%EC%A0%9C%EC%84%A4%EC%A0%95%EA%B8%B0%EB%8A%A5.png)
 
+![메인화면2](https://raw.githubusercontent.com/gh-56/learningman/refs/heads/release/gh/capture_img/capture_%EA%B3%BC%EC%A0%9C%EC%84%A4%EC%A0%95%EA%B8%B0%EB%8A%A5.png)
 안주 웹페이지에 접속하면 가장 먼저 메인 페이지가 나옵니다.  
 페이지 상단에는 **헤더**가 위치해 있으며, 메인 페이지는 스크롤을 통해 이동할 수 있는 **3개의 섹션**으로 구성되어 있습니다.
 
