--- a/blog/[20240912]_[당신의 안전한 주택_안주]_[안주]_[]_[AI가 만드는 편안한 안식처. 당신의 안전한 주택, 안주 프로젝트입니다. 웹 사용 설명서를 정리해봤습니다.]_[].md
+++ b/blog/[20240912]_[당신의 안전한 주택_안주]_[안주]_[]_[AI가 만드는 편안한 안식처. 당신의 안전한 주택, 안주 프로젝트입니다. 웹 사용 설명서를 정리해봤습니다.]_[].md
@@ -24,3 +24,9 @@
    [5-6. 신고 세부내용](#5-6-신고-세부내용)
 6. 대시보드
    [6-1. 대시보드](#6-1-대시보드)
+
+# 1-1. 메인 페이지 설명
+
+![메인페이지1](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_%EB%A9%94%EC%9D%B8%ED%99%94%EB%A9%B41.png?raw=true)
+
+![메인페이지2](https://raw.githubusercontent.com/gh-56/gh_blog/refs/heads/main/img/safehouse/image_%EB%A9%94%EC%9D%B8%ED%99%94%EB%A9%B41.png)
