--- a/blog/[20240912]_[당신의 안전한 주택_안주]_[안주]_[]_[AI가 만드는 편안한 안식처. 당신의 안전한 주택, 안주 프로젝트입니다. 웹 사용 설명서를 정리해봤습니다.]_[].md
+++ b/blog/[20240912]_[당신의 안전한 주택_안주]_[안주]_[]_[AI가 만드는 편안한 안식처. 당신의 안전한 주택, 안주 프로젝트입니다. 웹 사용 설명서를 정리해봤습니다.]_[].md
@@ -1,32 +1,46 @@
 > 안주 프로젝트의 전체 웹 흐름을 정리해봤습니다.
 
-1. 메인 페이지
-   [1-1. 메인 페이지 설명](#1-1-메인-페이지-설명)
-   [1-2. 헤더 설명](#1-2-헤더-설명)
-   [1-3. 텍스트 애니메이션](#1-3-텍스트-애니메이션)
-   [1-4. AI 결함 진단 체험](#1-4-AI-결함-진단-체험)
-   [1-5. 앱 다운로드 화면](#1-5-앱-다운로드-화면)
-2. 회원가입
-   [2-1. 회원가입 시작](#2-1-회원가입-시작)
-   [2-2. 회원가입 절차](#2-2-회원가입-절차)
-   [2-3. 회원가입 세부내용](#2-3-회원가입-세부내용)
-3. 로그인
-   [3-1. 로그인 시작 및 절차](#3-1-로그인-시작-및-절차)
-   [3-2. 로그인 세부내용](#3-2-로그인-세부내용)
-4. 로그아웃
-   [4-1. 로그아웃](#4-1-로그아웃)
-5. 신고하기
-   [5-1. 신고내역](#5-1-신고내역)
-   [5-2. 신고하기](#5-2-신고하기)
-   [5-3. 신고하기 세부내용](#5-3-신고하기-세부내용)
-   [5-4. 신고 상세보기](#5-4-신고-상세보기)
-   [5-5. 신고 수정하기](#5-5-신고-수정하기)
-   [5-6. 신고 세부내용](#5-6-신고-세부내용)
-6. 대시보드
-   [6-1. 대시보드](#6-1-대시보드)
+1. 메인 페이지 <br/>
+   [1-1. 메인 페이지 설명](#1-1-메인-페이지-설명) <br/>
+   [1-2. 헤더 설명](#1-2-헤더-설명) <br/>
+   [1-3. 텍스트 애니메이션](#1-3-텍스트-애니메이션) <br/>
+   [1-4. AI 결함 진단 체험](#1-4-AI-결함-진단-체험) <br/>
+   [1-5. 앱 다운로드 화면](#1-5-앱-다운로드-화면) <br/>
+2. 회원가입 <br/>
+   [2-1. 회원가입 시작](#2-1-회원가입-시작) <br/>
+   [2-2. 회원가입 절차](#2-2-회원가입-절차) <br/>
+   [2-3. 회원가입 세부내용](#2-3-회원가입-세부내용) <br/>
+3. 로그인 <br/>  
+   [3-1. 로그인 시작 및 절차](#3-1-로그인-시작-및-절차) <br/>
+   [3-2. 로그인 세부내용](#3-2-로그인-세부내용) <br/>
+4. 로그아웃 <br/>
+   [4-1. 로그아웃](#4-1-로그아웃) <br/>
+5. 신고하기 <br/>
+   [5-1. 신고내역](#5-1-신고내역) <br/>
+   [5-2. 신고하기](#5-2-신고하기) <br/>
+   [5-3. 신고하기 세부내용](#5-3-신고하기-세부내용) <br/>
+   [5-4. 신고 상세보기](#5-4-신고-상세보기) <br/>
+   [5-5. 신고 수정하기](#5-5-신고-수정하기) <br/>
+   [5-6. 신고 세부내용](#5-6-신고-세부내용) <br/>
+6. 대시보드 <br/>
+   [6-1. 대시보드](#6-1-대시보드) <br/>
 
 # 1-1. 메인 페이지 설명
 
 ![메인페이지1](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_%EB%A9%94%EC%9D%B8%ED%99%94%EB%A9%B41.png?raw=true)
+안주 웹페이지에 접속하면 가장 먼저 메인 페이지가 나옵니다. <br/>
+페이지 상단에는 **헤더**가 위치해 있으며, 메인 페이지는 스크롤을 통해 이동할 수 있는 **3개의 섹션**으로 구성되어 있습니다.
 
-![메인페이지2](https://raw.githubusercontent.com/gh-56/gh_blog/refs/heads/main/img/safehouse/image_%EB%A9%94%EC%9D%B8%ED%99%94%EB%A9%B41.png)
+# 1-2. 헤더 설명
+
+로그인 여부와 사용자 유형(일반 사용자/점검자)에 따라 메뉴 구성이 다르게 설정되어 있습니다. <br/>
+
+![로그인되지않은사용자](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_로그인되지않은사용자.png?raw=true)
+1. **로그인하지 않은 사용자** - **메뉴 항목**: 신고하기, 커뮤니티, 로그인, 앱 설명 - **설명**: 로그인하지 않은 상태에서는 신고하기, 커뮤니티, 앱 소개에 접근할 수 있도록 기본적인 메뉴가 제공됩니다.
+
+![로그인된일반인](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_로그인된일반인.png?raw=true)
+2. **일반 사용자** - **메뉴 항목**: 신고하기, 커뮤니티, 로그아웃, 앱 설명 - **설명**: 로그인한 일반 사용자는 신고 기능과 커뮤니티를 이용할 수 있으며, 앱 설명도 확인 가능합니다. 로그인 대신 로그아웃 버튼이 표시됩니다.
+
+![로그인된점검자](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_로그인된점검자.png?raw=true)
+3. **점검자** - **메뉴 항목**: 신고하기, 커뮤니티, 로그아웃, 대시보드 - **설명**: 점검자는 일반 사용자와 달리 **앱 설명 대신 대시보드**가 표시됩니다. 대시보드는 점검자가 필요한 데이터를 확인하거나 관리 작업을 수행할 수 있는 공간입니다.
+점검자는 대시보드를 통해 추가적인 관리 기능을 사용할 수 있는 권한을 가집니다.
