--- a/blog/[20240912]_[당신의 안전한 주택_안주]_[안주]_[]_[AI가 만드는 편안한 안식처. 당신의 안전한 주택, 안주 프로젝트입니다. 웹 사용 설명서를 정리해봤습니다.]_[].md
+++ b/blog/[20240912]_[당신의 안전한 주택_안주]_[안주]_[]_[AI가 만드는 편안한 안식처. 당신의 안전한 주택, 안주 프로젝트입니다. 웹 사용 설명서를 정리해봤습니다.]_[].md
@@ -36,11 +36,20 @@
 로그인 여부와 사용자 유형(일반 사용자/점검자)에 따라 메뉴 구성이 다르게 설정되어 있습니다. <br/>
 
 ![로그인되지않은사용자](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_로그인되지않은사용자.png?raw=true)
-1. **로그인하지 않은 사용자** - **메뉴 항목**: 신고하기, 커뮤니티, 로그인, 앱 설명 - **설명**: 로그인하지 않은 상태에서는 신고하기, 커뮤니티, 앱 소개에 접근할 수 있도록 기본적인 메뉴가 제공됩니다.
+1. **로그인하지 않은 사용자**
+
+- **메뉴 항목**: 신고하기, 커뮤니티, 로그인, 앱 설명
+- **설명**: 로그인하지 않은 상태에서는 신고하기, 커뮤니티, 앱 소개에 접근할 수 있도록 기본적인 메뉴가 제공됩니다.
 
 ![로그인된일반인](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_로그인된일반인.png?raw=true)
-2. **일반 사용자** - **메뉴 항목**: 신고하기, 커뮤니티, 로그아웃, 앱 설명 - **설명**: 로그인한 일반 사용자는 신고 기능과 커뮤니티를 이용할 수 있으며, 앱 설명도 확인 가능합니다. 로그인 대신 로그아웃 버튼이 표시됩니다.
+2. **일반 사용자**
+
+- **메뉴 항목**: 신고하기, 커뮤니티, 로그아웃, 앱 설명
+- **설명**: 로그인한 일반 사용자는 신고 기능과 커뮤니티를 이용할 수 있으며, 앱 설명도 확인 가능합니다. 로그인 대신 로그아웃 버튼이 표시됩니다.
 
 ![로그인된점검자](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_로그인된점검자.png?raw=true)
-3. **점검자** - **메뉴 항목**: 신고하기, 커뮤니티, 로그아웃, 대시보드 - **설명**: 점검자는 일반 사용자와 달리 **앱 설명 대신 대시보드**가 표시됩니다. 대시보드는 점검자가 필요한 데이터를 확인하거나 관리 작업을 수행할 수 있는 공간입니다.
-점검자는 대시보드를 통해 추가적인 관리 기능을 사용할 수 있는 권한을 가집니다.
+3. **점검자**
+
+- **메뉴 항목**: 신고하기, 커뮤니티, 로그아웃, 대시보드
+- **설명**: 점검자는 일반 사용자와 달리 **앱 설명 대신 대시보드**가 표시됩니다. 대시보드는 점검자가 필요한 데이터를 확인하거나 관리 작업을 수행할 수 있는 공간입니다.
+  점검자는 대시보드를 통해 추가적인 관리 기능을 사용할 수 있는 권한을 가집니다.
