docs: 안주 웹흐름 로그아웃까지

--- a/blog/[20240912]_[당신의 안전한 주택_안주]_[안주]_[]_[AI가 만드는 편안한 안식처. 당신의 안전한 주택, 안주 프로젝트입니다. 웹 사용 설명서를 정리해봤습니다.]_[].md
+++ b/blog/[20240912]_[당신의 안전한 주택_안주]_[안주]_[]_[AI가 만드는 편안한 안식처. 당신의 안전한 주택, 안주 프로젝트입니다. 웹 사용 설명서를 정리해봤습니다.]_[].md
@@ -53,3 +53,178 @@
 - **메뉴 항목**: 신고하기, 커뮤니티, 로그아웃, 대시보드
 - **설명**: 점검자는 일반 사용자와 달리 **앱 설명 대신 대시보드**가 표시됩니다. 대시보드는 점검자가 필요한 데이터를 확인하거나 관리 작업을 수행할 수 있는 공간입니다.
   점검자는 대시보드를 통해 추가적인 관리 기능을 사용할 수 있는 권한을 가집니다.
+
+# 1-3. 텍스트 애니메이션
+
+![메인화면](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_메인화면.png?raw=true)
+첫 번째 공간에서는 약 5초 동안 텍스트 애니메이션이 진행됩니다.
+
+# 1-4. AI 결함 진단 체험
+
+![메인화면2](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_메인화면2.png?raw=true)
+화면의 왼쪽은 결함 탐지를 체험할 수 있는 공간이며, 오른쪽은 결과가 출력되는 영역입니다.  
+체험을 위해 제공된 사진은 총 6장으로, 각각 **콘크리트 균열**, **박리**, **백태/누수**, **철근 노출**, **강재 손상**, **도장 손상**을 나타냅니다.
+
+캐러셀을 넘기며 체험할 사진을 선택한 후, **결함 탐지하기** 버튼을 클릭하면 "분석 중..."이라는 메시지가 표시되며 분석이 시작됩니다.  
+분석이 완료되면 다음과 같은 결과가 출력됩니다:
+
+1. **결함 탐지 결과**: 결함 유형과 위험 점수가 포함됩니다.
+2. **결함 설명**: 해당 결함에 대해 간단히 설명합니다.
+3. **조치 사항**: 결함에 대한 적절한 대응 방법을 안내합니다.
+
+사용자는 이를 통해 결함의 상태를 확인하고 필요한 조치를 이해할 수 있습니다.
+
+# 1-5. 앱 다운로드 화면
+
+![메인화면3앱다운로드](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_메인화면3앱다운로드.png?raw=true)
+왼쪽의 카드는 마우스 움직임에 따라 동적으로 반응합니다.  
+카드 안의 내용은 실제 앱에서 볼 수 있는 대시보드 화면을 보여줍니다.  
+또한, 안드로이드 스마트폰으로 QR코드를 스캔하면 APK 파일을 다운로드할 수 있습니다.
+
+# 2-1. 회원가입 시작
+
+![회원가입시작](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_회원가입시작.png?raw=true)
+
+- **회원가입/로그인 페이지 구성**:
+  - **왼쪽**: 회원가입
+  - **오른쪽**: 로그인
+- 화면에는 다음과 같은 텍스트와 버튼이 표시됩니다:
+  - "어서오세요!"
+  - "당신의 안전한 주택, 안주"
+  - **회원가입 버튼**
+
+# 2-2. 회원가입 절차
+
+![회원가입입력화면](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_회원가입입력화면.png?raw=true)
+
+1. **회원가입 버튼 클릭 시**:  
+   상단에서 **입주민**인지 **관리자(점검자)** 인지 선택할 수 있습니다.
+
+2. **공통 입력 항목**:
+   - 사용자 이름
+   - 이메일 입력 및 인증
+   - 비밀번호
+   - 전화번호
+   - 주소 입력
+   - 상세주소
+3. **점검자 추가 입력 항목**:
+   - 회사 이름
+   - 사원번호
+
+# 2-3. 회원가입 세부내용
+
+1. **토스트 메시지**  
+   회원가입 과정에서 발생하는 다양한 상황에 따라 아래와 같은 **토스트 메시지**가 표시됩니다:
+   ![회원가입토스트1](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_회원가입토스트1.png?raw=true)
+
+   - **이미 등록된 이메일**: 해당 이메일이 이미 사용 중임을 알림.
+
+   ![회원가입토스트2](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_회원가입토스트2.png?raw=true)
+
+   - **이메일 인증코드 전송 성공**: 인증 코드가 이메일로 성공적으로 발송되었음을 알림.
+
+   ![회원가입토스트3](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_회원가입토스트3.png?raw=true)
+
+   - **이메일 인증 미완료**: 이메일 인증이 아직 완료되지 않았음을 알림.
+
+   ![회원가입토스트4](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_회원가입토스트4.png?raw=true)
+
+   - **이메일 인증 완료**: 이메일 인증이 성공적으로 완료되었음을 알림.
+
+   ![회원가입토스트5](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_회원가입토스트5.png?raw=true)
+
+   - **회원가입 처리 중**: 회원가입 절차가 진행 중임을 알림.
+
+   ![회원가입토스트6](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_회원가입토스트6.png?raw=true)
+
+   - **필수 정보 미입력 후 제출 시**: 필수 입력 항목이 누락되었음을 알림.
+
+   ![회원가입토스트7](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_회원가입토스트7.png?raw=true)
+
+   - **회원 가입 완료**: 회원가입이 정상적으로 완료됨을 알림.
+
+2. **이메일 인증 코드 발송 화면**
+   ![이메일인증코드발송화면](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_이메일인증코드발송화면.png?raw=true)
+
+   - 이메일 인증은 30분간 유효합니다.
+
+3. **입력창 변경**
+   ![이메일인증완료버튼](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_이메일인증완료버튼.png?raw=true)
+
+   - 이메일 인증이 완료되면, **인증 버튼의 상태가 "완료"로 변경**됩니다.
+   - 이후, 버튼은 클릭할 수 없도록 비활성화됩니다.
+
+   ![비밀번호마스킹](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_비밀번호마스킹.png?raw=true)
+   ![비밀번호마스킹제거](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_비밀번호마스킹제거.png?raw=true)
+
+   - 비밀번호 입력 시 기본적으로 `●`와 같은 마스킹 처리로 표시됩니다.
+   - 자물쇠 이미지를 클릭하면 비밀번호가 텍스트 형태로 표시되도록 구현되었습니다.
+   - 다시 버튼을 클릭하면 비밀번호가 다시 마스킹 처리됩니다.
+
+# 3-1. 로그인 시작 및 절차
+
+![로그인시작](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_로그인시작.png?raw=true)
+
+- 로그인 시 이메일과 비밀번호를 입력합니다.
+
+# 3-2. 로그인 세부내용
+
+1. **토스트 메시지**
+   로그인 과정에서 발생하는 다양한 상황에 따라 아래와 같은 **토스트 메시지**가 표시됩니다:
+   ![일치하지않는아이디](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_일치하지않는아이디.png?raw=true)
+
+   - **등록되지 않은 이메일**: 해당 이메일이 등록되지 않았음을 알림.
+
+   ![일치하지않는비밀번호](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_일치하지않는비밀번호.png?raw=true)
+
+   - **비밀번호 불일치**: 비밀번호가 일치하지 않음을 알림.
+
+   ![로그인성공](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_로그인성공.png?raw=true)
+
+   - **로그인 성공 알림**: 로그인에 성공됨을 알림.
+
+2. **입력창 변경**
+   ![이메일형식](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_이메일형식.png?raw=true)
+
+   - 이메일이 @ 형식이 아니라면 포함해달라는 문구가 뜹니다.
+
+   ![비밀번호마스킹](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_비밀번호마스킹.png?raw=true)
+   ![비밀번호마스킹제거](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_비밀번호마스킹제거.png?raw=true)
+
+   - 비밀번호 입력 시 기본적으로 `●`와 같은 마스킹 처리로 표시됩니다.
+   - 자물쇠 이미지를 클릭하면 비밀번호가 텍스트 형태로 표시되도록 구현되었습니다.
+   - 다시 버튼을 클릭하면 비밀번호가 다시 마스킹 처리됩니다.
+
+   ![로그인Loading](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_로그인Loading.png?raw=true)
+
+   - 로그인 버튼 클릭 시 버튼의 텍스트가 "Loading..." 으로 바뀝니다.
+
+3. **로그인 정보**
+   - 30분간 토큰이 유효합니다.
+
+# 4-1. 로그아웃
+
+![로그아웃](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_로그아웃.png?raw=true)
+
+- **로그아웃**: 로그아웃을 알림.
+
+# 5-1. 신고내역
+
+![나의신고게시글](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_나의신고게시글.png?raw=true)
+![신고내역](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_신고내역.png?raw=true)
+
+1. **신고내역 테이블**
+   - 신고 내역은 목록 형태로 표시되며, 각 행에는 다음 정보가 포함됩니다:
+     - 번호
+     - 제목
+     - 작성자
+     - 작성일
+     - 결함 유형
+2. **토글 기능**
+   - **나의 게시글 보기**: 본인이 작성한 신고 내역만 확인할 수 있습니다.
+   - **전체 게시글 보기**: 전체 게시글은 개인 정보가 가려진 **비밀글**로 표시되며, 열람은 불가능합니다.
+3. **페이지네이션**
+   - 신고 내역은 5페이지 단위로 나뉘어 표시됩니다.
+   - 하단의 페이지네이션을 통해 페이지를 이동할 수 있습니다.
+4. **신고하기 버튼**
+   - 화면에 표시된 **신고하기 버튼**을 클릭하면 새로운 신고를 등록할 수 있습니다.
