사진 업로드

--- a/blog/[20240912]_[당신의 안전한 주택_안주]_[안주]_[]_[AI가 만드는 편안한 안식처. 당신의 안전한 주택, 안주 프로젝트입니다. 웹 사용 설명서를 정리해봤습니다.]_[].md
+++ b/blog/[20240912]_[당신의 안전한 주택_안주]_[안주]_[]_[AI가 만드는 편안한 안식처. 당신의 안전한 주택, 안주 프로젝트입니다. 웹 사용 설명서를 정리해봤습니다.]_[].md
@@ -23,7 +23,31 @@
    [5-5. 신고 수정하기](#5-5-신고-수정하기) <br/>
    [5-6. 신고 세부내용](#5-6-신고-세부내용) <br/>
 6. 대시보드 <br/>
+   전체 대시보드 <br>
    [6-1. 대시보드](#6-1-대시보드) <br/>
+   [부산시 신고 위치](#6-2-부산시-신고-위치) <br/>
+   [부산시 결함 통계](#6-3-부산시-결함-통계) <br/>
+
+내 구역 대시보드
+
+[내 구역 대시보드 설명](#6-4-내-구역-대시보드-설명) <br/>
+[신고목록](#6-5-신고목록) <br/>
+[점검목록](#6-6-점검목록) <br/>
+[일정관리 캘린더](#6-7-일정관리-캘린더) <br/>
+[오늘의 점검](#6-8-오늘의-점검) <br/>
+
+## 체크리스트
+
+[체크리스트](#6-9-체크리스트) <br/>
+[체크리스트 작성](#6-10-체크리스트-작성) <br/>
+
+## AI 보고서
+
+[AI 보고서](#6-11-AI-보고서) <br/>
+
+## 대시보드 디테일
+
+[대시보드 디테일](#6-12-대시보드-디테일) <br/>
 
 # 1-1. 메인 페이지 설명
 
@@ -228,3 +252,273 @@
    - 하단의 페이지네이션을 통해 페이지를 이동할 수 있습니다.
 4. **신고하기 버튼**
    - 화면에 표시된 **신고하기 버튼**을 클릭하면 새로운 신고를 등록할 수 있습니다.
+
+# 5-2. 신고하기
+
+![신고하기](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_신고하기.png?raw=true)
+
+1. **작성자 정보**
+   - 작성자명은 회원 정보에 기반하여 자동 입력됩니다.
+   - 작성자명은 수정이 불가능하도록 설정되어 있습니다.
+2. **주소 입력**
+   - 주소는 **카카오 API**를 활용하여 입력됩니다.
+   - 상세주소는 사용자가 직접 입력할 수 있습니다.
+3. **신고 내용 작성**
+   - 제목과 내용을 입력하여 신고를 작성합니다.
+   - **결함 유형**을 선택하여 신고 내용을 분류합니다.
+4. **이미지 첨부**
+   - 신고 시 관련 이미지를 업로드할 수 있습니다.
+
+# 5-3. 신고하기 세부내용
+
+![결함유형선택](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_결함유형선택.png?raw=true)
+
+- **결함 유형 선택**: 각 균열에 대한 간단한 설명과 이미지를 보여줌.
+
+![신고로딩화면](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_신고로딩화면.png?raw=true)
+
+- **신고 내용 AI 분석 과정**
+  - 🏗️ AI가 건물의 결함을 분석하고 있습니다...
+  - 🔍 이미지를 자세히 살펴보는 중입니다...
+  - 📊 결함의 심각도를 평가하고 있습니다...
+  - 🤖 꼼꼼히 보느라 시간이 걸리네요...! 조금만 기다려주세요!
+
+![이미지분석결과](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_이미지분석결과.png?raw=true)
+
+- **이미지 분석 결과**
+  - 분석 메시지를 신고자에게 알려줌.
+
+# 5-4. 신고 상세보기
+
+![신고상세보기](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_신고상세보기.png?raw=true)
+
+- 신고 상세 정보 제공
+  신고된 내용에는 다음과 같은 정보가 포함되어 제공됩니다:
+  - **제목**
+  - **작성자**
+  - **주소**
+  - **작성일**
+  - **신고된 결함 유형**
+  - **신고 내용**
+  - **첨부파일 유무**
+  - **AI 분석 결과**
+- 버튼
+  - **목록으로**: 이전 목록 화면으로 돌아갑니다.
+  - **수정**: 현재 내용을 수정할 수 있는 페이지로 이동합니다.
+  - **삭제**: 해당 신고 내역을 삭제할 수 있습니다.
+
+# 5-5. 신고 수정하기
+
+![신고수정하기](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_신고수정하기.png?raw=true)
+
+- 게시물 제목과 내용을 수정할 수 있습니다.
+
+# 5-6. 신고 세부내용
+
+![비밀글보기](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_비밀글보기.png?raw=true)
+
+- **본인이 작성한 글만 열람**: 비밀글을 클릭하면 본인 글만 볼 수 있다는 알림.
+
+![신고수정](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_신고수정.png?raw=true)
+
+- **신고 수정**: 신고글 수정 성공에 대한 알림.
+
+![신고삭제확인](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_신고삭제확인.png?raw=true)
+
+- **신고 삭제 확인**: 신고 삭제 버튼 클릭 시 한번 더 확인 알림.
+
+![신고삭제](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_신고삭제.png?raw=true)
+
+- **신고 삭제**: 신고글 삭제 성공에 대한 알림.
+
+![신고성공](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_신고성공.png?raw=true)
+
+- **신고 성공**: 신고글 작성 성공에 대한 알림.
+
+# 6-1. 대시보드
+
+## 전체 대시보드
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_전체대시보드.png?raw=true)
+
+1. **사이드바 구성**
+
+   - 왼쪽 사이드바에는 다음 메뉴가 포함되어 있습니다:
+     - **전체 대시보드**
+     - **내 구역 대시보드**
+     - **체크리스트 작성**
+     - **AI 보고서**
+     - **테마 변경**
+     - **사이드바 접기**
+
+2. **초기 화면**
+   - 웹페이지에 접속하면 가장 먼저 **전체 대시보드 화면**이 표시됩니다.
+3. **사이드바 접기 기능**
+   - 사이드바는 접기 버튼을 통해 숨길 수 있어 화면 공간을 효율적으로 사용할 수 있습니다.
+
+# 6-2. 내 구역 대시보드
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_부산시%20신고%20위치.png?raw=true)
+
+1. **네이버 지도 API 활용**
+
+   - 신고된 위치는 **네이버 지도 API**를 사용해 지도에 표시됩니다.
+   - 각 신고 위치에는 **마커**가 표시되며, 마커를 클릭하면 해당 신고 내역의 상세 정보가 나타납니다.
+     - **상태**: 취소됨, 예정됨, 진행중, 완료됨
+     - **유형**: 콘크리트 균열, 박리, 백태/누수, 철근 노출, 강재 손상, 도장 손상
+     - **설명**: 신고 접수된 내용
+     - **주소**: 신고자가 작성한 주소
+
+2. **점검자 권한에 따른 데이터 필터링**
+   - 점검자는 **자신이 가입한 구에 해당하는 신고 정보만 확인**할 수 있습니다.
+   - 예를 들어, 점검자가 해운대구로 가입한 경우, 해운대구의 신고 목록만 지도와 대시보드에 표시됩니다.
+
+# 6-3. 부산시 결함 통계
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_부산시%20결함%20통계.png?raw=true)
+
+1. **부산시 및 각 구의 결함 통계 확인**
+   - 부산시 전체와 각 구에 대한 결함 통계를 확인할 수 있습니다.
+2. **신고된 결함 통계**
+   - **신고자가 직접 선택한 결함 유형**을 기준으로 통계를 집계한 결과입니다.
+   - 사용자가 신고 시 선택한 결함 유형(예: 균열, 박리 등)이 통계에 반영됩니다.
+3. **AI 분석 결함 통계**
+   - **신고된 이미지 데이터를 AI가 분석**하여 도출한 결함 유형 통계입니다.
+   - AI 분석을 통해 신고 이미지에서 감지된 결함 정보를 기반으로 통계를 제공합니다.
+
+# 6-4. 내 구역 대시보드 설명
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_내구역대시보드.png?raw=true)
+화면에는 다음과 같은 점검 관련 메뉴가 제공됩니다:
+
+- **신고와 점검 목록**: 신고된 내역과 점검 진행 상황을 확인할 수 있습니다.
+- **점검 현황**: 현재 진행 중인 점검 상태를 한눈에 파악할 수 있습니다.
+- **점검 달력**: 점검 일정이 달력 형태로 표시되어 관리가 용이합니다.
+- **오늘의 점검**: 당일 예정된 점검 작업을 확인할 수 있습니다.
+
+# 6-5. 신고목록
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_신고목록과점검목록.png?raw=true)
+신고목록으로 점검 지역구의 신고 목록들을 한 눈에 편하게 볼 수 있습니다.
+다음과 같은 정보를 확인할 수 있습니다:
+
+- **신고 ID**: 각 신고 건에 부여된 고유 식별 번호
+- **신고일**: 신고가 접수된 날짜
+- **신고 내용**: 신고자가 작성한 상세 내용
+- **주소**: 신고된 결함의 위치
+- **신고된 결함 유형**: 신고자가 선택한 결함 유형 (예: 균열, 박리 등)
+- **AI 분석 결과**: AI가 분석한 결함 유형
+- **위험 점수**: AI 분석을 통해 산출된 위험 수준 점수
+- **예약하기 버튼**: 점검 예약을 위한 기능 제공
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_예약하기.png?raw=true)
+예약하기 버튼을 눌러 예약할 수 있습니다.
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_신고점검현황.png?raw=true)
+예약이 완료되면 바로 점검현황에 반영되고 점검 목록에서 확인할 수 있습니다.
+
+# 6-6. 점검목록
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_점검목록.png?raw=true)
+점검 ID, 유형, 상태, 예정일, 완료일, 점검자, 신고내용, 주소, 결함유형을 보여줍니다.
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_상태변경토글.png?raw=true)
+토글을 눌러 전체보기, 예정됨, 진행중, 완료됨, 취소됨 목록들을 필터링해서 볼 수 있습니다.
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_상태변경.png?raw=true)
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_점검현황.png?raw=true)
+상태를 토글로 변경할 수 있고 변경하면 즉시 실시간으로 점검현황에 반영됩니다.
+
+# 6-7. 일정관리 캘린더
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_캘린더.png?raw=true)
+점검 일정을 달력으로 쉽게 확인할 수 있습니다.
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_달력점검상세정보.png?raw=true)
+선택한 날짜에 예약된 점검이 있을 경우 **점검 상세 정보**를 보여줍니다.
+**날짜**와 **상태**, **위치**, **신고내용**을 보여줍니다.
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_달력예약점검없음.png?raw=true)
+선택한 날짜에 예약된 점검이 없을 경우입니다.
+
+# 6-8. 오늘의 점검
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_오늘의점검.png?raw=true)
+오늘 날짜에 대한 점검 목록들만 보여줍니다.
+점검 유형, 상태, 점검자, 예정일, 주소, 결함 유형, 신고 내용을 보여줍니다.
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_오늘의점검없음.png?raw=true)
+만약 오늘 점검이 없다면 예약된 점검이 없다고 표시됩니다.
+
+# 6-9. 체크리스트
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_체크리스트%20목록.png?raw=true)
+점검자가 예정되거나 진행중인 점검들에 대해 체크리스트를 작성할 수 있는 공간입니다.
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_체크리스트상태변경.png?raw=true)
+점검ID, 예정일, 신고된 결함, 주소가 표시됩니다.
+토글을 눌러 상태를 변경할 수 있습니다.
+
+# 6-10. 체크리스트 작성
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_체크리스트기본정보.png?raw=true)
+
+1. **기본 정보 입력**
+   - **점검번호**와 **주소**는 자동으로 입력되며, 수정이 불가능합니다.
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_점검일자선택.png?raw=true) 2. **점검일자 선택** - 점검일자는 달력 UI를 통해 손쉽게 선택할 수 있습니다.
+
+3. **추가 정보 입력**
+   - **점검자 이름**과 **연락처**를 입력합니다.
+   - 점검 대상의 **결함 종류**를 선택할 수 있습니다.
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_체크콘크리트균열.png?raw=true)
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_체크누수백태.png?raw=true)
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_체크강재부식.png?raw=true)
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_체크박리.png?raw=true)
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_체크철근노출.png?raw=true)
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_체크도장손상.png?raw=true)
+균열 항목마다 체크리스트가 다릅니다. 사용자는 선택한 결함 유형에 적합한 체크리스트를 확인하고 선택할 수 있습니다.
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_종합평가.png?raw=true)
+종합평가 내용들을 체크 합니다.
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_다음점검일정.png?raw=true)
+다음 점검 일정이 필요한 경우 날짜를 선택합니다.
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_체크리스트제출중.png?raw=true)
+제출 버튼을 누르면 체크리스트가 체출됩니다.
+
+# 6-11. AI 보고서
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_생성보고서목록.png?raw=true)
+생성이 된 보고서 목록을 볼 수 있습니다.
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_보고서다운로드.png?raw=true)
+다운로드 버튼을 클릭하면 보고서가 다운로드 됩니다.
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_보고서.png?raw=true)
+다운 받은 파일을 열면 pdf 파일로 생성된 보고서가 열리게 됩니다.
+보고서는 체크리스트에서 체크한 항목들을 문장으로 만들어 보여줍니다.
+
+# 6-12. 대시보드 디테일
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_신고목록로딩실패.png?raw=true)
+
+- **신고목록 불러오기 실패**: 토큰 만료, 인터넷 연결 등의 이유로 신고 목록을 불러오지 못함을 알림.
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_오늘날짜예약.png?raw=true)
+
+- **오늘 날짜 예약**: 오늘 날짜로 예약하려 할 때 다른 날짜를 선택하도록 알림.
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_점검성공등록.png?raw=true)
+
+- **예약 성공**: 예약이 성공하면 알림.
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_점검상태업데이트.png?raw=true)
+
+- **점검 상태 업데이트**: 상태를 바꿨을 경우 알림. (예정됨 -> 진행중)
+
+![](https://github.com/gh-56/gh_blog/blob/main/img/safehouse/image_점검상태변경불가.png?raw=true)
+
+- **점검 상태 변경 불가**: 상태를 바꾸지 못 할 경우 알림 (진행중 -> 예정됨)
